# func-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
shader/: simple.ps  simple.vs  textured.ps
src/: argvec.hpp  camera.cpp  camera.hpp  config.hpp  effect.cpp  effect.hpp  function.hpp  functions1d.hpp  functions2d.hpp  globals.hpp  graph1d.cpp  graph1d.hpp  graph2d.cpp  graph2d.hpp  input.cpp  input.hpp  main.cpp  map.cpp  map.hpp  mesh.cpp  mesh.hpp  modifiers.hpp  myfunctions.hpp  myscene.cpp  random.cpp  random.hpp  renderer3d.cpp  renderer3d.hpp  scene.cpp  scene.hpp  texture.cpp  vertexbuffer.hpp
src/functions/: function.hpp  functions2d.hpp
src/rendering/: camera.cpp  effect.cpp  graph1d.cpp  graph1d.hpp  graph2d.cpp  graph2d.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
src/scenes/: myscene.cpp  scene.cpp  scene.hpp
texture/: rock.DDS
